--- a/public/style.css
+++ b/public/style.css
@@ -256,7 +256,7 @@ background-size: 100%;
   background: linear-gradient(
       rgba(0, 0, 0, 0.3),
       rgba(0, 0, 0, 0.3)
-    ), url('NYC B&W.jpg') no-repeat;
+    ), url('NYCBW.jpg') no-repeat;
     background-size: 100%;
   text-align: center;
 }
