--- a/public/style.css
+++ b/public/style.css
@@ -256,7 +256,7 @@ background-size: 100%;
   background: linear-gradient(
       rgba(0, 0, 0, 0.3),
       rgba(0, 0, 0, 0.3)
-    ), url('NYCBW.jpg') no-repeat;
+    ), url('clinton.jpg') no-repeat;
     background-size: 100%;
   text-align: center;
 }
@@ -267,9 +267,6 @@ background-size: 100%;
   color: white;
 }
 
-.aboutdiv{
-  margin-top: 30%;
-}
 .contactdiv{
   margin-top: 10px;
   text-decoration: none;
