--- a/public/style.css
+++ b/public/style.css
@@ -126,7 +126,7 @@ ul{
   .heading5 { height: 200px; }
   .heading7 { background-size: 150%; }
   .heading7  { height: 200px; }
-  .dabody {background-size:contain;}
+  .dabody {background-size: 1000px 1000px;}
 
 
 }
