--- a/public/style.css
+++ b/public/style.css
@@ -119,7 +119,7 @@ ul{
 
 }
 
-@media only screen and (max-width: 700px){
+@media only screen and (max-device-width: 700px){
   .heading3 { height: 200px; }
   .heading4 { height: 200px; }
   .heading5 { background-size: 150%; }
@@ -148,14 +148,7 @@ ul{
      .signupbody {background-size:300%;}
   }
 
-  @media only screen and (max-width: 500px){
-        .heading7{ background-size: 200%; }
-          .dabody { background: linear-gradient(rgba(0, 0, 0, 0.2),
-      rgba(0, 0, 0, 0.2)), url('pizza2.jpg') no-repeat -66px;
-      background-size: cover; }
-}
-
-  @media only screen and (max-width: 300px){
+  @media only screen and (max-device-width: 500px){
         .heading7{ background-size: 200%; }
           .dabody { background: linear-gradient(rgba(0, 0, 0, 0.2),
       rgba(0, 0, 0, 0.2)), url('pizza2.jpg') no-repeat -66px;
