--- a/public/style.css
+++ b/public/style.css
@@ -119,16 +119,13 @@ ul{
 
 }
 
-@media only screen and (max-device-width: 700px){
+@media only screen and (max-width: 700px){
   .heading3 { height: 200px; }
   .heading4 { height: 200px; }
   .heading5 { background-size: 150%; }
   .heading5 { height: 200px; }
   .heading7 { background-size: 150%; }
   .heading7  { height: 200px; }
-  .dabody { background: linear-gradient(rgba(0, 0, 0, 0.2),
-      rgba(0, 0, 0, 0.2)), url('pizza2.jpg') no-repeat -66px;
-      background-size: cover; }
 
 }
 @media only screen and (max-width: 800px){
@@ -148,11 +145,8 @@ ul{
      .signupbody {background-size:300%;}
   }
 
-  @media only screen and (max-device-width: 500px){
+  @media only screen and (max-width: 500px){
         .heading7{ background-size: 200%; }
-          .dabody { background: linear-gradient(rgba(0, 0, 0, 0.2),
-      rgba(0, 0, 0, 0.2)), url('pizza2.jpg') no-repeat -66px;
-      background-size: cover; }
 }
 /* div{
   border: black solid 5px;
